# misch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  architecture.md  configuration.md  rule-texts.md
src/misch/: __init__.py  cli.py  config.py  scaffold.py
src/misch/db/: __init__.py
src/misch/engine/: __init__.py  cppcheck.py
src/misch/report/: __init__.py  baseline.py  dev_render.py  deviations.py  headlines.py  model.py  renderers.py
src/misch/templates/analysis/: README.md
src/misch/templates/analysis/baseline/: README.md
src/misch/templates/analysis/deviations/: misra-deviations.txt
src/misch/templates/analysis/rules/: README.md
tests/: test_core.py  test_e2e.py  test_scaffold.py
