[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "misch"
version = "0.1.1"
description = "Config-driven MISRA C:2023 static-analysis harness for arbitrary C projects (cppcheck-backed, bring-your-own rule texts)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Aaron James Long" }]
keywords = ["misra", "static-analysis", "cppcheck", "c", "embedded", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "rich>=13.0",
    "rich-argparse>=1.5",
]

[project.urls]
Repository = "https://github.com/aajll/misch"
Changelog = "https://github.com/aajll/misch/blob/master/CHANGELOG.md"
Issues = "https://github.com/aajll/misch/issues"

[project.scripts]
misch = "misch.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/misch"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
